--- a/Views/Home/Sell.cshtml
+++ b/Views/Home/Sell.cshtml
@@ -84,7 +84,7 @@
                         <!-- Widget search -->
                         <div class="widget-box">
                             <div class="col-sm-10" style="max-width: 100%;">
-                                <form method="get" class="form-search-blog">
+                                <form method="get"  class="form-search-blog">
 
                                     @*<div class="input-group">
                                         <div class="input-group-prepend" style="width: 35%;">
@@ -123,7 +123,7 @@
                                         <p class="search-label">Max Price: <span id="maxVal"></span></p>
                                         <div class="slidecontainer">
                                             <!-- Default Values For Rent, if it's sell will change by script in bottom of this page !!! -->
-                                            <input  type="range" min="0" step="20" max="1000" value="1000" class="slider"  id="maxRange">
+                                            <input name="maxRange" type="range" min="0" step="20" max="1000" value="1000" class="slider"  id="maxRange">
                               
                                         </div>
 
@@ -131,7 +131,7 @@
                                         <p class="search-label">Min Price: <span id="minVal"></span></p>
                                         <div class="slidecontainer">
                                             <!-- Default Values For Rent, if it's sell will change by script in bottom of this page !!! -->
-                                            <input   type="range" min="0" step="20" max="1000" value="0" class="slider"   id="minRange">
+                                            <input name="minRange"  type="range" min="0" step="20" max="1000" value="0" class="slider"   id="minRange">
                                         </div>
 
 
